[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "temporal-order-lifecycle"
version = "0.1.0"
description = ""
authors = [{name = "Vishal Kumar", email = "vishalmkumar3@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "temporalio",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]